--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,9 @@ spring.application.name = blog
 ## LOGGER
 debug = true
 logging.path = /var/tmp
+
+## DATABASE
+driver = org.postgresql.Driver
+url = jdbc:postgresql://localhost:5431/blog
+dbuser = root
+dbpassword = root
