--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,6 @@ logging.path = /var/tmp
 
 ## DATABASE
 driver = org.postgresql.Driver
-url = jdbc:postgresql://localhost:5431/blog
-dbuser = root
+url = jdbc:postgresql://localhost:5432/blog
+dbuser = admin
 dbpassword = root
