--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,24 @@
 version: '3.2'
 services:
-  
- database:
-    container_name: db
-    image: postgres:10.3
-    env_file: ./.env
-    volumes:
-        - postgres:/data/postgres
-    ports:
-      - "5432:5432"
-    restart: unless-stopped
+    application:
+      container_name: blog_application
+      image: application_blog
+      build:
+        context: .
+        dockerfile: Dockerfile
+      ports:
+        - 8080:8080
+      restart: always
+
+    database:
+      container_name: db
+      image: postgres:10.3
+      env_file: ./.env
+      volumes:
+          - postgres:/data/postgres
+      ports:
+        - "5432:5432"
+      restart: unless-stopped
 
 volumes:
   postgres:
